* JDK 8
[git-p4: depot-paths = "//matrikkel/matrikkel-wsclient/trunk/": change = 81334]